[package]
name = "tsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
socket = "0.0.7"
ifstructs = "0.1.1"
rand = "0.8.5"
hex = "0.4.3"
nix = "0.24.1"
signal-hook = "0.3.14"
clap = { version = "3.2.8", features = ["derive", "cargo"] }
pnet = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
itertools = "0.10.5"
regex = "1"
serde_yaml = "0.8"

[[bin]]
name = "latency"
path = "src/bin/latency.rs"

[[bin]]
name = "throughput"
path = "src/bin/throughput.rs"
