[tool.poetry]
name = "pytsn"
version = "0.1.0"
description = "Web interface for libtsn"
authors = ["Jeong Arm <arm@tsnlab.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
PyYAML = "^6.0"
pyinotify = "^0.9.6"
watchdog = "^2.1.6"
watchgod = "^0.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

tsnucd = "pytsn.cli:main"
tsnwebui = "pytsn.webui.cli:main"
