[package]
name = "tsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
arguments = "0.6.1"
libc = "0.2.126"
socket = "0.0.7"
ifstructs = "0.1.1"
rand = "0.8.5"
hex = "0.4.3"
signal-hook = "0.3.14"
nix = "0.24.1"
clap = { version = "3.2.8", features = ["derive"] }

[[bin]]
name="latency"
path="src/bin/latency.rs"
